[master] Still problem. This is in SCK related HAL_GPIO_Init() called from HAL_SPI_MspInit() (stm32l0xx_hal_msp.c). Inside of HAL_GPIO_Init(), even if function commented, the green led not flashing. But below this call, the other calls HAL_GPIO_Init() are OK. Perhaps problem lies in SPIx_SCK_AF GPIO_AF0_SPI1, but replace with GPIO_AF1_SPI1 changes nothing.

--- a/MDK-ARM/STM32L053R8_NUCLEO/STM32L053R8_NUCLEO.build_log.htm
+++ b/MDK-ARM/STM32L053R8_NUCLEO/STM32L053R8_NUCLEO.build_log.htm
@@ -22,21 +22,43 @@ Dialog DLL:      TARMCM1.DLL V1.10.0.0
  
 <h2>Project:</h2>
 C:\data\stm32l0work\SPI_FullDuplex_ComPolling\MDK-ARM\Project.uvprojx
-Project File Date:  12/02/2017
+Project File Date:  12/31/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32L053R8_NUCLEO'
+compiling stm32l0xx_nucleo.c...
+compiling stm32l0xx_hal_pwr.c...
+compiling stm32l0xx_hal_flash.c...
+compiling stm32l0xx_hal_cortex.c...
+compiling stm32l0xx_hal_adc.c...
+compiling stm32l0xx_hal_adc_ex.c...
+compiling stm32l0xx_hal_spi.c...
+compiling stm32l0xx_hal_gpio.c...
+compiling stm32l0xx_hal_rcc_ex.c...
+compiling stm32l0xx_hal_pwr_ex.c...
+compiling stm32l0xx_hal_dma.c...
+compiling stm32l0xx_hal.c...
+compiling stm32l0xx_hal_flash_ex.c...
+compiling stm32l0xx_hal_rcc.c...
+compiling system_stm32l0xx.c...
+compiling stm32l0xx_it.c...
+compiling stm32l0xx_hal_msp.c...
 compiling main.c...
-../Src/main.c(572): warning:  #177-D: function "Timeout_Error_Handler" was declared but never referenced
+../Src/main.c(429): warning:  #177-D: variable "oled_buf" was declared but never referenced
+    uint8_t oled_buf[WIDTH * HEIGHT / 8];
+../Src/main.c(600): warning:  #177-D: function "Timeout_Error_Handler" was declared but never referenced
   static void Timeout_Error_Handler(void)
-../Src/main.c(587): warning:  #177-D: function "Buffercmp" was declared but never referenced
+../Src/main.c(615): warning:  #177-D: function "Buffercmp" was declared but never referenced
   static uint16_t Buffercmp(uint8_t* pBuffer1, uint8_t* pBuffer2, uint16_t BufferLength)
-../Src/main.c: 2 warnings, 0 errors
+../Src/main.c: 3 warnings, 0 errors
 compiling mcal_spi.c...
+compiling sh1106.c...
+compiling mcal_gpio.c...
+assembling startup_stm32l053xx.s...
 linking...
-Program Size: Code=4252 RO-data=1280 RW-data=28 ZI-data=1132  
-"STM32L053R8_NUCLEO\STM32L053R8_NUCLEO.axf" - 0 Error(s), 2 Warning(s).
+Program Size: Code=5372 RO-data=264 RW-data=28 ZI-data=1132  
+"STM32L053R8_NUCLEO\STM32L053R8_NUCLEO.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +76,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:07
+Build Time Elapsed:  00:01:15
 </pre>
 </body>
 </html>
